# MPCHomeControl

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.json5  model.json5  podlazi.dxf  theory.md
.claude/skills/cleanliness-review/: SKILL.md  cleanliness-workflow.js
.claude/skills/iterative-review/: SKILL.md  review-workflow.js
.github/workflows/: ci.yml
MPCHomeControl/: Cargo.toml  config.json5  model.json5
MPCHomeControl/src/: influxdb.rs  main.rs  material.rs  model.rs  zone.rs
MPCHomeControl/src/tools/: mod.rs  sun.rs
adapters/mqtt-bridge/: Cargo.toml  bridge.example.json5
adapters/mqtt-bridge/src/: config.rs  influx.rs  main.rs
adapters/mqtt-common/: Cargo.toml
adapters/mqtt-common/src/: lib.rs
adapters/mqtt-source/: Cargo.toml  mqtt-source.example.json5
adapters/mqtt-source/deploy/: Dockerfile
adapters/mqtt-source/src/: config.rs  main.rs
controllers/boiler/: Cargo.toml  boiler.example.json5
controllers/boiler/src/: config.rs  main.rs  translate.rs
controllers/common/: Cargo.toml
controllers/common/src/: lib.rs
controllers/ev/: Cargo.toml  ev.example.json5
controllers/ev/src/: config.rs  main.rs  translate.rs
controllers/examples/: python_controller_stub.py
controllers/growatt/: Cargo.toml  growatt.json5
controllers/growatt/src/: config.rs  main.rs  translate.rs
controllers/heating/: Cargo.toml  heating.json5
controllers/heating/src/: config.rs  main.rs  translate.rs
controllers/loxone/: Cargo.toml  loxone.example.json5  loxone.json5
controllers/loxone/src/: config.rs  main.rs  translate.rs
controllers/protocol/: Cargo.toml
controllers/protocol/src/: lib.rs
controllers/publisher/: Cargo.toml  publisher.json5
controllers/publisher/src/: build.rs  config.rs  main.rs  plan.rs  publish.rs
deploy/: Dockerfile  controller.Dockerfile  healthcheck.sh  parse_plan.py  run-container.sh  run-growatt.sh  run-loxone.sh  run-publisher.sh
deploy/grafana/: mpc-brain-dashboard.json  mpc-shadow-dashboard.json
docs/: api.md  configuration.md  controllers.md  data-sources.md  ev.md  loxone-controller-plan.md  mqtt-architecture.md
src/: app.rs  compare.rs  estimate.rs  forecast_validation.rs  influxdb.rs  live.rs  live_inputs.rs  main.rs  material.rs  model.rs  mpc_loop.rs  pv_backtest.rs  rc_network.rs  solar_forecast.rs  state_space.rs  topology.rs  validate.rs  web.rs  zone.rs
src/dashboard/: app.js  index.html  style.css
src/ev/: inputs.rs  mod.rs  prefs.rs  state.rs
src/forecast/: calibration.rs  consumption.rs  mod.rs  solar.rs
src/optimize/: battery.rs  config.rs  coordinator.rs  mod.rs  thermal.rs  unified.rs
src/source/: mod.rs
src/tools/: mod.rs  sun.rs
