[package]
name = "mpc_home_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxrs = "2.0.0"
json5 = "0.4.1"
serde = { version = "1.0.145", features = ["derive"] }
anyhow = "1.0.65"
itertools = "0.10.5"
uom = { version = "0.33.0", features = ["use_serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
spa = "0.3.0"
chrono = "0.4"
nalgebra = "0.9"
test-case = "3.1.0"


[dev-dependencies]
test-strategy = "0.2.1"
proptest = "1.0.0"
assert_matches = "1.5.0"
tempfile = "3.3.0"
