# This repo is a cargo workspace: the read-only `mpc_home_control` shadow MPC is the ROOT package
# (its deps below are unchanged — note it never pulls an MQTT/actuation crate, so its read-only
# property is structural). The pluggable hardware controllers live in `controllers/` as separate
# crates with their own MQTT deps. See docs/controllers.md.
[workspace]
resolver = "2"
members = [
    "controllers/protocol",
    "controllers/publisher",
    "controllers/growatt",
    "controllers/heating",
]

# Shared dependency versions for the controller crates (the root package keeps its own list below).
[workspace.dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.65"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
json5 = "0.4.1"
rumqttc = "0.24"
ureq = { version = "2", default-features = false }
controller_protocol = { path = "controllers/protocol" }

[package]
name = "mpc_home_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxrs = "2.0.0"
json5 = "0.4.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.65"
itertools = "0.10.5"
uom = { version = "0.34.0", features = ["use_serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
axum = "0.7"
spa = "0.3.0"
chrono = { version = "0.4", features = ["serde"] }
petgraph = "0.6.2"
multimap = "0.9.0"
nalgebra = "0.33"
good_lp = { version = "1", default-features = false, features = ["microlp"] }
# Only pulled in (and built from source) by the `vendored-tls` feature, for static cross-builds.
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }

[features]
# Static cross-builds (e.g. musl for the Synology server) where no system OpenSSL is available:
# vendor and build OpenSSL from source so `influxrs`'s transitive curl/openssl C deps link. Off by
# default — CI and normal dev builds use the system OpenSSL.
vendored-tls = ["dep:openssl-sys"]

[dev-dependencies]
test-strategy = "0.2.1"
proptest = "1.0.0"
assert_matches = "1.5.0"
tempfile = "3.3.0"
test-case = "3.1.0"
approx = "0.5.1"
