[package]
name = "MPCHomeControl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxrs = "2.0.0"
json5 = "0.4.1"
serde = { version = "1.0.145", features = ["derive"] }
anyhow = "1.0.65"
itertools = "0.10.5"
