[package]
name = "mpc-controller-boiler"
version = "0.1.0"
edition = "2021"
description = "Controller: translates the MPC's controllable-load (boiler / hot-water tank) plan into a device command (stub — logged would-send only, no real protocol yet; dry-run draft)."

[[bin]]
name = "mpc-controller-boiler"
path = "src/main.rs"

[dependencies]
controller_protocol = { workspace = true }
controller_common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
json5 = { workspace = true }
rumqttc = { workspace = true }
tokio = { workspace = true }
