[package]
name = "mpc-controller-ev"
version = "0.1.0"
edition = "2021"
description = "Controller: translates the MPC's per-charger EV plan into Loxone UDP virtual-input datagrams for the wallbox (dry-run draft)."

[[bin]]
name = "mpc-controller-ev"
path = "src/main.rs"

[dependencies]
controller_protocol = { workspace = true }
controller_common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
json5 = { workspace = true }
rumqttc = { workspace = true }
tokio = { workspace = true }
