[package]
name = "mpc-controller-heating"
version = "0.1.0"
edition = "2021"
description = "Controller: translates MPC per-zone heating into Loxone UDP virtual-input datagrams (dry-run draft)."

[[bin]]
name = "mpc-controller-heating"
path = "src/main.rs"

[dependencies]
controller_protocol = { workspace = true }
controller_common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
json5 = { workspace = true }
rumqttc = { workspace = true }
tokio = { workspace = true }
