[package]
name = "mpc-plan-publisher"
version = "0.1.0"
edition = "2021"
description = "Reads the read-only MPC plan API and republishes control commands to MQTT (north bridge)."

[[bin]]
name = "mpc-plan-publisher"
path = "src/main.rs"

[dependencies]
controller_protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
json5 = { workspace = true }
ureq = { workspace = true }
rumqttc = { workspace = true }
